--- a/Border/8.连续的图像边框.html
+++ b/Border/8.连续的图像边框.html
@@ -6,10 +6,10 @@
 	<style>
 		.border{
 			color: skyblue;
-			font-size: 30px;
+			font-size: 16px;
 			font-weight: bold;
 			line-height: 10em;
-			width: 15em;
+			width: 10em;
 			height: 10em;
 			text-align: center;
 
@@ -39,6 +39,12 @@
 			background-clip: padding-box, border-box;
 			background-position: 0;
 			background-size: 5em 5em;
+
+			transition: background-position 1s linear;
+		}
+
+		.border-email:hover{
+			background-position: 100%;
 		}
 
 		@keyframes ants{
